Drag&Drog added

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-multi-select-component": "^4.1.14",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
